--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -30,4 +30,4 @@ jobs:
           git config user.email "actions@github.com"
           git add index.html
           git commit -m "🔄 Daily update: $(date '+%Y-%m-%d')" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:main
