--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -30,4 +30,6 @@ jobs:
           git config user.email "actions@github.com"
           git add index.html
           git commit -m "🔄 Daily update: $(date '+%Y-%m-%d')" || echo "No changes to commit"
+      - name: Show current branch
+        run: git branch
           git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:main
