--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add index.html
+          git add -A
           git commit -m "🔄 Daily update: $(date '+%Y-%m-%d')" || echo "No changes to commit"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
 
